# scholarmis-framework

./: LICENSE  README.md  pyproject.toml
scholarmis/framework/: apps.py  billing.py  choices.py  emails.py  exceptions.py  feedback.py  files.py  filters.py  forms.py  helpers.py  json.py  managers.py  middleware.py  mimetypes.py  models.py  paginators.py  resources.py  search.py  serializers.py  services.py  settings.py  storage.py  tasks.py  viewsets.py
scholarmis/framework/commands/: __init__.py  exceptions.py  plugin.py  project.py  prompts.py  system.py  validate.py
scholarmis/framework/commands/stubs/plugin/: apps.stub  plugin.txt  pyproject.txt  readme.txt  urls.stub
scholarmis/framework/commands/stubs/project/: gitignore.txt  manage.txt  requirements.txt
scholarmis/framework/commands/stubs/project/bootstrap/: api_router.stub  asgi.stub  celery_app.stub  urls.stub  websocket.stub  wsgi.stub
scholarmis/framework/commands/stubs/project/config/: base.stub  local.stub  production.stub
scholarmis/framework/plugins/: __init__.py  discoverers.py  exceptions.py  extensions.py  generator.py  installer.py  loader.py  lockfile.py  mergers.py  metadata.py  pip.py  registry.py  utils.py  validators.py
