[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholarmis-framework"
version = "0.1.0"
description = "Scholarmis Framework"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Scholarmis Team", email = "dev@scholarmis.com" }]
dependencies = [
  "Django>=5.1",
  "django-model-utils>=5.0",
  "django-countries>=7.6.1",
  "click>=8.2",
  "importlib-metadata>=8.7",
  "python-slugify>=8",
  "premailer>=3.10",
  "pip-tools>=7.5",
  "requests>=2.32",
  "semver>=3.0",
]
[project.scripts]
scholarmis = "scholarmis.framework.commands:cli"
